# episodata

./: LICENSE  README.md  pyproject.toml
episodata/: __init__.py  collector.py  dataset.py  episode.py
tests/: test_import.py
